@@ -13,6 +13,7 @@ import com.yahoo.config.provision.Flavor;
 import com.yahoo.config.provision.HostSpec;
 import com.yahoo.config.provision.InstanceName;
 import com.yahoo.config.provision.NodeFlavors;
+import com.yahoo.config.provision.NodeResources;
 import com.yahoo.config.provision.NodeType;
 import com.yahoo.config.provision.RegionName;
 import com.yahoo.config.provision.TenantName;
@@ -26,7 +27,6 @@ import com.yahoo.vespa.curator.transaction.CuratorTransaction;
 import com.yahoo.vespa.flags.InMemoryFlagSource;
 import com.yahoo.vespa.hosted.provision.Node;
 import com.yahoo.vespa.hosted.provision.NodeRepository;
-import com.yahoo.vespa.hosted.provision.monitoring.MetricsReporterTest;
 import com.yahoo.vespa.hosted.provision.node.Agent;
 import com.yahoo.vespa.hosted.provision.provisioning.FlavorConfigBuilder;
 import com.yahoo.vespa.hosted.provision.provisioning.NodeRepositoryProvisioner;
@@ -48,6 +48,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 
 import static org.junit.Assert.assertEquals;
 
@@ -129,7 +130,7 @@ public class NodeFailTester {
         List<Node> hosts = tester.createHostNodes(numberOfHosts);
         for (int i = 0; i < hosts.size(); i++) {
             tester.createReadyNodes(nodesPerHost, i * nodesPerHost, Optional.of("parent" + i),
-                    nodeFlavors.getFlavorOrThrow("docker"), NodeType.tenant);
+                                    nodeFlavors.getFlavorOrThrow("d-1-1-1"), NodeType.tenant);
         }
 
         // Create applications
@@ -137,8 +138,8 @@ public class NodeFailTester {
         ClusterSpec clusterApp1 = ClusterSpec.request(ClusterSpec.Type.container, ClusterSpec.Id.from("test"), Version.fromString("6.75.0"), false, Collections.emptySet());
         ClusterSpec clusterApp2 = ClusterSpec.request(ClusterSpec.Type.content, ClusterSpec.Id.from("test"), Version.fromString("6.75.0"), false, Collections.emptySet());
         Capacity allHosts = Capacity.fromRequiredNodeType(NodeType.host);
-        Capacity capacity1 = Capacity.fromNodeCount(3, Optional.of("docker"), false, true);
-        Capacity capacity2 = Capacity.fromNodeCount(5, Optional.of("docker"), false, true);
+        Capacity capacity1 = Capacity.fromCount(3, new NodeResources(1, 1, 1), false, true);
+        Capacity capacity2 = Capacity.fromCount(5, new NodeResources(1, 1, 1), false, true);
         tester.activate(nodeAdminApp, clusterNodeAdminApp, allHosts);
         tester.activate(app1, clusterApp1, capacity1);
         tester.activate(app2, clusterApp2, capacity2);
@@ -158,22 +159,21 @@ public class NodeFailTester {
         return tester;
     }
 
-    public static NodeFailTester withProxyApplication() {
+    public static NodeFailTester withInfraApplication(NodeType nodeType, int count) {
         NodeFailTester tester = new NodeFailTester();
-
-        tester.createReadyNodes(16, NodeType.proxy);
+        tester.createReadyNodes(count, nodeType);
 
         // Create application
-        Capacity allProxies = Capacity.fromRequiredNodeType(NodeType.proxy);
+        Capacity allNodes = Capacity.fromRequiredNodeType(nodeType);
         ClusterSpec clusterApp1 = ClusterSpec.request(ClusterSpec.Type.container,
                                                       ClusterSpec.Id.from("test"),
                                                       Version.fromString("6.42"),
-                                                      false, Collections.emptySet());
-        tester.activate(app1, clusterApp1, allProxies);
-        assertEquals(16, tester.nodeRepository.getNodes(NodeType.proxy, Node.State.active).size());
+                                                      false, Set.of());
+        tester.activate(app1, clusterApp1, allNodes);
+        assertEquals(count, tester.nodeRepository.getNodes(nodeType, Node.State.active).size());
 
-        Map<ApplicationId, MockDeployer.ApplicationContext> apps = new HashMap<>();
-        apps.put(app1, new MockDeployer.ApplicationContext(app1, clusterApp1, allProxies, 1));
+        Map<ApplicationId, MockDeployer.ApplicationContext> apps = Map.of(
+                app1, new MockDeployer.ApplicationContext(app1, clusterApp1, allNodes, 1));
         tester.deployer = new MockDeployer(tester.provisioner, tester.clock(), apps);
         tester.serviceMonitor = new ServiceMonitorStub(apps, tester.nodeRepository);
         tester.metric = new MetricsReporterTest.TestMetric();
@@ -207,7 +207,7 @@ public class NodeFailTester {
     }
 
     public NodeFailer createFailer() {
-        return new NodeFailer(deployer, hostLivenessTracker, serviceMonitor, nodeRepository, downtimeLimitOneHour, clock, orchestrator, NodeFailer.ThrottlePolicy.hosted, metric, new JobControl(nodeRepository.database()), configserverConfig);
+        return new NodeFailer(deployer, hostLivenessTracker, serviceMonitor, nodeRepository, downtimeLimitOneHour, clock, orchestrator, NodeFailer.ThrottlePolicy.hosted, metric, configserverConfig);
     }
 
     public void allNodesMakeAConfigRequestExcept(Node ... deadNodeArray) {
